--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "uxnijin",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production"
@@ -17,14 +18,15 @@
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "postcss": "^8.5.3",
     "postcss-loader": "^7.0.1",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.75.0",
+    "webpack": "^5.98.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.15.2"
   }
 }
